--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -3,3 +3,6 @@ $black-color: #000000;
 $dark-color: #1e1a1d;
 $primary-color: #7d80da;
 $grey-color: #f4f4f8;
+$green-color: #28a745;
+$brown-color: #a52a2a;
+$gold-color: #5f2600;
