--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -326,6 +326,14 @@
       }
    }
 
+   header {
+      padding: 1rem 0.5rem;
+
+      h3 {
+         font-size: 1rem;
+      }
+   }
+
    .showcase {
       h1 {
          letter-spacing: 5px;
@@ -375,6 +383,22 @@
 
       i {
          font-size: 1.5rem;
+      }
+   }
+
+   .casestudies {
+      .content {
+         .case {
+            &-preview {
+               .btn {
+                  margin: 0.5rem 0;
+               }
+
+               h3 {
+                  margin: 0.5rem 0;
+               }
+            }
+         }
       }
    }
 
