Yes added new projects

--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -94,7 +94,9 @@
 
    .files,
    .pick,
-   .days {
+   .days,
+   .wings,
+   .shop {
       .case-showcase {
          .details {
             h1 {
@@ -104,7 +106,8 @@
 
             .icon-green,
             .icon-brown,
-            .icon-gold {
+            .icon-gold,
+            .icon-shop-grey {
                padding: 0.8rem 1.3rem;
 
                i {
@@ -239,7 +242,9 @@
 
    .files,
    .pick,
-   .days {
+   .days,
+   .shop,
+   .wings {
       .case-showcase {
          .details {
             h1 {
@@ -249,7 +254,8 @@
 
             .icon-green,
             .icon-brown,
-            .icon-gold {
+            .icon-gold,
+            .icon-shop-grey {
                padding: 0.5rem 1rem;
 
                i {
@@ -406,14 +412,17 @@
    .skills,
    .files,
    .pick,
-   .days {
+   .days,
+   .wings,
+   .shop {
       .content {
          width: 90%;
       }
 
       .project-design-brown,
       .project-design-green,
-      .project-design-gold {
+      .project-design-gold,
+      .project-design-shop-grey {
          .content {
             width: 90%;
          }
@@ -422,7 +431,9 @@
 
    .files,
    .pick,
-   .days {
+   .days,
+   .wings,
+   .shop {
       .case-showcase {
          .details {
             h1 {
@@ -432,7 +443,8 @@
 
             .icon-green,
             .icon-brown,
-            .icon-gold {
+            .icon-gold,
+            .icon-shop-grey {
                padding: 0.5rem 1rem;
 
                i {
