Added a new case study:  B.one Concept

--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -4,6 +4,7 @@ $dark-color: #1e1a1d;
 $primary-color: #7d80da;
 $grey-color: #f4f4f8;
 $shop-grey-color: #6c757d;
+$bconcept-brown-color: #a36c3c;
 $green-color: #28a745;
 $brown-color: #a52a2a;
 $gold-color: #5f2600;
