--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -1,487 +1,495 @@
 @media (max-width: 1080px) {
-   h1 {
-      font-size: 4rem;
-   }
+	h1 {
+		font-size: 4rem;
+	}
 
-   h2 {
-      font-size: 2rem;
-   }
+	h2 {
+		font-size: 2rem;
+	}
 
-   h3 {
-      font-size: 2rem;
-   }
+	h3 {
+		font-size: 2rem;
+	}
 
-   h4 {
-      font-size: 1.5rem;
-   }
+	h4 {
+		font-size: 1.5rem;
+	}
 
-   h5 {
-      font-size: 1rem;
-   }
+	h5 {
+		font-size: 1rem;
+	}
 
-   h6 {
-      font-size: 0.8rem;
-   }
+	h6 {
+		font-size: 0.8rem;
+	}
 
-   body {
-      font-size: 14px;
-   }
+	body {
+		font-size: 14px;
+	}
 
-   .btn {
-      font-size: 0.75rem;
-   }
+	.btn {
+		font-size: 0.75rem;
+	}
 
-   header {
-      h3 {
-         font-family: 'Smooch', cursive;
-         font-size: 1.5rem;
-      }
-   }
+	header {
+		h3 {
+			font-family: "Smooch", cursive;
+			font-size: 1.5rem;
+		}
+	}
 
-   .showcase {
-      h1 {
-         letter-spacing: 15px;
-         font-size: 6rem;
-      }
+	.showcase {
+		h1 {
+			letter-spacing: 15px;
+			font-size: 6rem;
+		}
 
-      .icon {
-         background-color: $grey-color;
-         padding: 0.8rem 1.3rem;
+		.icon {
+			background-color: $grey-color;
+			padding: 0.8rem 1.3rem;
 
-         i {
-            font-size: 2.1rem;
-         }
-      }
-   }
+			i {
+				font-size: 2.1rem;
+			}
+		}
+	}
 
-   .icon-btn {
-      width: 3rem;
+	.icon-btn {
+		width: 3rem;
 
-      height: 3rem;
+		height: 3rem;
 
-      i {
-         font-size: 2.1rem;
-      }
-   }
+		i {
+			font-size: 2.1rem;
+		}
+	}
 
-   .green {
-      width: 3rem;
+	.green {
+		width: 3rem;
 
-      height: 3rem;
+		height: 3rem;
 
-      i {
-         font-size: 2.1rem;
-      }
-   }
+		i {
+			font-size: 2.1rem;
+		}
+	}
 
-   .brown {
-      width: 3rem;
-      height: 3rem;
+	.brown {
+		width: 3rem;
+		height: 3rem;
 
-      i {
-         font-size: 2.1rem;
-      }
-   }
+		i {
+			font-size: 2.1rem;
+		}
+	}
 
-   .gold {
-      width: 3rem;
-      height: 3rem;
+	.gold {
+		width: 3rem;
+		height: 3rem;
 
-      i {
-         font-size: 2.1rem;
-      }
-   }
+		i {
+			font-size: 2.1rem;
+		}
+	}
 
-   .files,
-   .pick,
-   .days,
-   .wings,
-   .shop {
-      .case-showcase {
-         .details {
-            h1 {
-               letter-spacing: 15px;
-               font-size: 5rem;
-            }
+	.files,
+	.pick,
+	.days,
+	.wings,
+	.shop,
+	.bconcept {
+		.case-showcase {
+			.details {
+				h1 {
+					letter-spacing: 15px;
+					font-size: 5rem;
+				}
 
-            .icon-green,
-            .icon-brown,
-            .icon-gold,
-            .icon-shop-grey {
-               padding: 0.8rem 1.3rem;
+				.icon-green,
+				.icon-brown,
+				.icon-gold,
+				.icon-shop-grey,
+				.icon-bconcept-brown {
+					padding: 0.8rem 1.3rem;
 
-               i {
-                  font-size: 2.1rem;
-               }
-            }
-         }
-      }
-   }
+					i {
+						font-size: 2.1rem;
+					}
+				}
+			}
+		}
+	}
 
-   .contact {
-      .content {
-         h1 {
-            font-size: 5rem;
-         }
-         .icons {
-            a {
-               i {
-                  font-size: 1.5rem;
-               }
-            }
-         }
-      }
-   }
+	.contact {
+		.content {
+			h1 {
+				font-size: 5rem;
+			}
+			.icons {
+				a {
+					i {
+						font-size: 1.5rem;
+					}
+				}
+			}
+		}
+	}
 
-   footer {
-      h2 {
-         font-size: 4rem;
-         line-height: 1.7;
-      }
+	footer {
+		h2 {
+			font-size: 4rem;
+			line-height: 1.7;
+		}
 
-      .icons {
-         a {
-            i {
-               font-size: 1.5rem;
-            }
-         }
-      }
-   }
+		.icons {
+			a {
+				i {
+					font-size: 1.5rem;
+				}
+			}
+		}
+	}
 }
 
 @media (max-width: 880px) {
-   h1 {
-      font-size: 3rem;
-   }
+	h1 {
+		font-size: 3rem;
+	}
 
-   h2 {
-      font-size: 2rem;
-   }
+	h2 {
+		font-size: 2rem;
+	}
 
-   h3 {
-      font-size: 1.5rem;
-   }
+	h3 {
+		font-size: 1.5rem;
+	}
 
-   h4 {
-      font-size: 1rem;
-   }
+	h4 {
+		font-size: 1rem;
+	}
 
-   h5 {
-      font-size: 0.8rem;
-   }
+	h5 {
+		font-size: 0.8rem;
+	}
 
-   h6 {
-      font-size: 0.6rem;
-   }
+	h6 {
+		font-size: 0.6rem;
+	}
 
-   body {
-      font-size: 12px;
-   }
+	body {
+		font-size: 12px;
+	}
 
-   .btn {
-      font-size: 0.5rem;
-   }
+	.btn {
+		font-size: 0.5rem;
+	}
 
-   header {
-      h3 {
-         font-size: 1.2rem;
-      }
-   }
+	header {
+		h3 {
+			font-size: 1.2rem;
+		}
+	}
 
-   .showcase {
-      h1 {
-         letter-spacing: 10px;
-         font-size: 4rem;
-      }
+	.showcase {
+		h1 {
+			letter-spacing: 10px;
+			font-size: 4rem;
+		}
 
-      .icon {
-         background-color: $grey-color;
-         padding: 0.8rem 1.3rem;
+		.icon {
+			background-color: $grey-color;
+			padding: 0.8rem 1.3rem;
 
-         i {
-            font-size: 2.1rem;
-         }
-      }
-   }
+			i {
+				font-size: 2.1rem;
+			}
+		}
+	}
 
-   .icon-btn {
-      width: 2rem;
-      height: 3rem;
+	.icon-btn {
+		width: 2rem;
+		height: 3rem;
 
-      i {
-         font-size: 1.5rem;
-      }
-   }
+		i {
+			font-size: 1.5rem;
+		}
+	}
 
-   .green {
-      width: 2rem;
-      height: 3rem;
+	.green {
+		width: 2rem;
+		height: 3rem;
 
-      i {
-         font-size: 1.5rem;
-      }
-   }
+		i {
+			font-size: 1.5rem;
+		}
+	}
 
-   .brown {
-      width: 2rem;
-      height: 3rem;
+	.brown {
+		width: 2rem;
+		height: 3rem;
 
-      i {
-         font-size: 1.5rem;
-      }
-   }
+		i {
+			font-size: 1.5rem;
+		}
+	}
 
-   .gold {
-      width: 2rem;
-      height: 3rem;
+	.gold {
+		width: 2rem;
+		height: 3rem;
 
-      i {
-         font-size: 1.5rem;
-      }
-   }
+		i {
+			font-size: 1.5rem;
+		}
+	}
 
-   .files,
-   .pick,
-   .days,
-   .shop,
-   .wings {
-      .case-showcase {
-         .details {
-            h1 {
-               letter-spacing: 15px;
-               font-size: 4rem;
-            }
+	.files,
+	.pick,
+	.days,
+	.shop,
+	.wings,
+	.bconcept {
+		.case-showcase {
+			.details {
+				h1 {
+					letter-spacing: 15px;
+					font-size: 4rem;
+				}
 
-            .icon-green,
-            .icon-brown,
-            .icon-gold,
-            .icon-shop-grey {
-               padding: 0.5rem 1rem;
+				.icon-green,
+				.icon-brown,
+				.icon-gold,
+				.icon-shop-grey,
+				.icon-bconcept-brown {
+					padding: 0.5rem 1rem;
 
-               i {
-                  font-size: 1.5rem;
-               }
-            }
-         }
-      }
-   }
+					i {
+						font-size: 1.5rem;
+					}
+				}
+			}
+		}
+	}
 
-   .contact {
-      .content {
-         h1 {
-            font-size: 4rem;
-         }
-         .icons {
-            a {
-               i {
-                  font-size: 1.2rem;
-               }
-            }
-         }
-      }
-   }
+	.contact {
+		.content {
+			h1 {
+				font-size: 4rem;
+			}
+			.icons {
+				a {
+					i {
+						font-size: 1.2rem;
+					}
+				}
+			}
+		}
+	}
 
-   footer {
-      h2 {
-         font-size: 3rem;
-         letter-spacing: 10px;
-      }
+	footer {
+		h2 {
+			font-size: 3rem;
+			letter-spacing: 10px;
+		}
 
-      .icons {
-         a {
-            i {
-               font-size: 1.2rem;
-            }
-         }
-      }
-   }
+		.icons {
+			a {
+				i {
+					font-size: 1.2rem;
+				}
+			}
+		}
+	}
 }
 
 @media (max-width: 680px) {
-   h1 {
-      font-size: 2rem;
-   }
+	h1 {
+		font-size: 2rem;
+	}
 
-   h3 {
-      font-size: 1rem;
-   }
+	h3 {
+		font-size: 1rem;
+	}
 
-   h4 {
-      font-size: 0.8rem;
-   }
+	h4 {
+		font-size: 0.8rem;
+	}
 
-   h5 {
-      font-size: 0.6rem;
-   }
+	h5 {
+		font-size: 0.6rem;
+	}
 
-   h6 {
-      font-size: 0.5rem;
-   }
+	h6 {
+		font-size: 0.5rem;
+	}
 
-   body {
-      font-size: 10px;
-   }
+	body {
+		font-size: 10px;
+	}
 
-   .btn {
-      font-size: 0.5rem;
-   }
+	.btn {
+		font-size: 0.5rem;
+	}
 
-   header {
-      h3 {
-         font-size: 1rem;
-      }
-   }
+	header {
+		h3 {
+			font-size: 1rem;
+		}
+	}
 
-   header {
-      padding: 1rem 0.5rem;
+	header {
+		padding: 1rem 0.5rem;
 
-      h3 {
-         font-size: 1rem;
-      }
-   }
+		h3 {
+			font-size: 1rem;
+		}
+	}
 
-   .showcase {
-      h1 {
-         letter-spacing: 5px;
-         font-size: 2.5rem;
-      }
+	.showcase {
+		h1 {
+			letter-spacing: 5px;
+			font-size: 2.5rem;
+		}
 
-      .icon {
-         background-color: $grey-color;
-         padding: 0.5rem 1rem;
+		.icon {
+			background-color: $grey-color;
+			padding: 0.5rem 1rem;
 
-         i {
-            font-size: 2.1rem;
-         }
-      }
-   }
+			i {
+				font-size: 2.1rem;
+			}
+		}
+	}
 
-   .icon-btn {
-      width: 2rem;
-      height: 3rem;
+	.icon-btn {
+		width: 2rem;
+		height: 3rem;
 
-      i {
-         font-size: 1.5rem;
-      }
-   }
+		i {
+			font-size: 1.5rem;
+		}
+	}
 
-   .green {
-      width: 2rem;
-      height: 3rem;
+	.green {
+		width: 2rem;
+		height: 3rem;
 
-      i {
-         font-size: 1.5rem;
-      }
-   }
+		i {
+			font-size: 1.5rem;
+		}
+	}
 
-   .brown {
-      width: 2rem;
-      height: 3rem;
+	.brown {
+		width: 2rem;
+		height: 3rem;
 
-      i {
-         font-size: 1.5rem;
-      }
-   }
+		i {
+			font-size: 1.5rem;
+		}
+	}
 
-   .gold {
-      width: 2rem;
-      height: 3rem;
+	.gold {
+		width: 2rem;
+		height: 3rem;
 
-      i {
-         font-size: 1.5rem;
-      }
-   }
+		i {
+			font-size: 1.5rem;
+		}
+	}
 
-   .casestudies {
-      .content {
-         .case {
-            &-preview {
-               .btn {
-                  margin: 0.5rem 0;
-               }
+	.casestudies {
+		.content {
+			.case {
+				&-preview {
+					.btn {
+						margin: 0.5rem 0;
+					}
 
-               h3 {
-                  margin: 0.5rem 0;
-               }
-            }
-         }
-      }
-   }
+					h3 {
+						margin: 0.5rem 0;
+					}
+				}
+			}
+		}
+	}
 
-   .casestudies,
-   .skills,
-   .files,
-   .pick,
-   .days,
-   .wings,
-   .shop {
-      .content {
-         width: 90%;
-      }
+	.casestudies,
+	.skills,
+	.files,
+	.pick,
+	.days,
+	.wings,
+	.shop,
+	.bconcept {
+		.content {
+			width: 90%;
+		}
 
-      .project-design-brown,
-      .project-design-green,
-      .project-design-gold,
-      .project-design-shop-grey {
-         .content {
-            width: 90%;
-         }
-      }
-   }
+		.project-design-brown,
+		.project-design-green,
+		.project-design-gold,
+		.project-design-shop-grey,
+		.project-design-bconcept-brown {
+			.content {
+				width: 90%;
+			}
+		}
+	}
 
-   .files,
-   .pick,
-   .days,
-   .wings,
-   .shop {
-      .case-showcase {
-         .details {
-            h1 {
-               letter-spacing: 15px;
-               font-size: 2rem;
-            }
+	.files,
+	.pick,
+	.days,
+	.wings,
+	.shop,
+	.bconcept {
+		.case-showcase {
+			.details {
+				h1 {
+					letter-spacing: 15px;
+					font-size: 2rem;
+				}
 
-            .icon-green,
-            .icon-brown,
-            .icon-gold,
-            .icon-shop-grey {
-               padding: 0.5rem 1rem;
+				.icon-green,
+				.icon-brown,
+				.icon-gold,
+				.icon-shop-grey,
+				.icon-bconcept-brown {
+					padding: 0.5rem 1rem;
 
-               i {
-                  font-size: 1.5rem;
-               }
-            }
-         }
-      }
-   }
+					i {
+						font-size: 1.5rem;
+					}
+				}
+			}
+		}
+	}
 
-   .contact {
-      .content {
-         h1 {
-            font-size: 2rem;
-         }
-         .icons {
-            a {
-               i {
-                  font-size: 0.9rem;
-               }
-            }
-         }
-      }
-   }
+	.contact {
+		.content {
+			h1 {
+				font-size: 2rem;
+			}
+			.icons {
+				a {
+					i {
+						font-size: 0.9rem;
+					}
+				}
+			}
+		}
+	}
 
-   footer {
-      h2 {
-         font-size: 2rem;
-         letter-spacing: 10px;
-      }
+	footer {
+		h2 {
+			font-size: 2rem;
+			letter-spacing: 10px;
+		}
 
-      .icons {
-         a {
-            i {
-               font-size: 0.9rem;
-            }
-         }
-      }
-   }
+		.icons {
+			a {
+				i {
+					font-size: 0.9rem;
+				}
+			}
+		}
+	}
 }
