--- a/scss/style.scss
+++ b/scss/style.scss
@@ -542,6 +542,15 @@ header {
 		justify-content: center;
 		flex-direction: column;
 
+		.tel {
+			color: $black-color;
+			@include easeOut();
+
+			&:hover {
+				color: $primary-color;
+			}
+		}
+
 		h1 {
 			font-family: "Smooch", cursive;
 			font-weight: lighter;
