Added some project

--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -5,6 +5,8 @@ $primary-color: #7d80da;
 $grey-color: #f4f4f8;
 $shop-grey-color: #6c757d;
 $bconcept-brown-color: #a36c3c;
+$acusa-purple-color: #102082;
+$safepay-blue-color: #007bff;
 $green-color: #28a745;
 $brown-color: #a52a2a;
 $gold-color: #5f2600;
