--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -97,7 +97,9 @@
 	.days,
 	.wings,
 	.shop,
-	.bconcept {
+	.bconcept,
+	.acusa,
+	.safepay {
 		.case-showcase {
 			.details {
 				h1 {
@@ -109,7 +111,9 @@
 				.icon-brown,
 				.icon-gold,
 				.icon-shop-grey,
-				.icon-bconcept-brown {
+				.icon-bconcept-brown,
+				.icon-acusa-purple,
+				.icon-safepay-blue {
 					padding: 0.8rem 1.3rem;
 
 					i {
@@ -247,7 +251,9 @@
 	.days,
 	.shop,
 	.wings,
-	.bconcept {
+	.bconcept,
+	.acusa,
+	.safepay {
 		.case-showcase {
 			.details {
 				h1 {
@@ -259,7 +265,9 @@
 				.icon-brown,
 				.icon-gold,
 				.icon-shop-grey,
-				.icon-bconcept-brown {
+				.icon-bconcept-brown,
+				.icon-acusa-purple,
+				.icon-safepay-blue {
 					padding: 0.5rem 1rem;
 
 					i {
@@ -419,7 +427,9 @@
 	.days,
 	.wings,
 	.shop,
-	.bconcept {
+	.bconcept,
+	.acusa,
+	.safepay {
 		.content {
 			width: 90%;
 		}
@@ -428,7 +438,9 @@
 		.project-design-green,
 		.project-design-gold,
 		.project-design-shop-grey,
-		.project-design-bconcept-brown {
+		.project-design-bconcept-brown,
+		.project-design-acusa-purple,
+		.project-design-safepay-blue {
 			.content {
 				width: 90%;
 			}
@@ -440,7 +452,9 @@
 	.days,
 	.wings,
 	.shop,
-	.bconcept {
+	.bconcept,
+	.acusa,
+	.safepay {
 		.case-showcase {
 			.details {
 				h1 {
@@ -452,7 +466,9 @@
 				.icon-brown,
 				.icon-gold,
 				.icon-shop-grey,
-				.icon-bconcept-brown {
+				.icon-bconcept-brown,
+				.icon-acusa-purple,
+				.icon-safepay-blue {
 					padding: 0.5rem 1rem;
 
 					i {
