Updated some part

--- a/scss/_utlitiies.scss
+++ b/scss/_utlitiies.scss
@@ -12,7 +12,7 @@ img {
 }
 
 @mixin easeOut {
-	transition: all ease-out 0.5s;
+	transition: all ease-in-out 0.5s;
 }
 
 h1 {
@@ -37,6 +37,10 @@ h5 {
 
 h6 {
 	font-size: 1rem;
+}
+
+.text-white {
+	color: $white-color;
 }
 
 .text-primary {
@@ -72,7 +76,8 @@ h6 {
 }
 
 .btn {
-	padding: 0.5rem 1rem;
+	padding: 0.7rem 1.5rem;
+	border-radius: 10px;
 	font-size: 0.9rem;
 	outline: none;
 	cursor: pointer;
